--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-VITE_BACKEND_API=
-https://terbangaja-staging-dot-kampus-merdeka-6.df.r.appspot.com/
+VITE_BACKEND_API=https://terbangaja-staging-dot-kampus-merdeka-6.df.r.appspot.com/
 VITE_GOOGLE_CLIENT_ID=http://368072322979-4318icq8l58bd6i2gnhnd9i18hii42hv.apps.googleusercontent.com/
