--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "styled-components": "^6.1.11"
