--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.1.3",
     "@react-oauth/google": "^0.12.1",
+    "@react-pdf/renderer": "^3.4.4",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-date-range": "^2.0.1",
